overflow-fix

--- a/css/chapters.css
+++ b/css/chapters.css
@@ -8,7 +8,9 @@
 
     z-index: 1;
 
-    backdrop-filter: blur(10px) brightness(0.5);
+    /* backdrop-filter: blur(10px) brightness(0.5); */
+    filter: opacity(0.95);
+    background-color: var(--bg0);
     gap: var(--sz10);
 
     padding-bottom: 0;
